fix menu-top-form alignment issue

--- a/css/base.css
+++ b/css/base.css
@@ -7539,8 +7539,8 @@ legend[class*="col-xx-"] {
       width: 400px; } }
 
 .menu-top-form {
-  margin-top: 12px;
-  margin-bottom: 12px; }
+  margin-top: 6px;
+  margin-bottom: 6px; }
 
 .menu-top-img {
   display: -webkit-box;
