--- a/sass/theme/_menu.scss
+++ b/sass/theme/_menu.scss
@@ -145,8 +145,8 @@
 }
 
 .menu-top-form {
-	margin-top: ($line-height * 0.5);
-	margin-bottom: ($line-height * 0.5);
+	margin-top: ($line-height / 4);
+	margin-bottom: ($line-height / 4);
 }
 
 .menu-top-img {
